--- a/TrendingTweetsAPI/TweetSampler.API.csproj
+++ b/TrendingTweetsAPI/TweetSampler.API.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AssemblyName>TrendingTweetsAPI</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
-    <ProjectReference Include="..\TweetSampleModel\TweetSampleModel.csproj">
+    <ProjectReference Include="..\TweetSampleModel\TweetSampler.Model.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
