--- a/TweetSampleWorker/Properties/launchSettings.json
+++ b/TweetSampleWorker/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "TweetSampleWorker": {
       "commandName": "Project",
+      "applicationUrl": "http://localhost:5000/",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
