--- a/TweetProcessor/TweetSampler.Core.csproj
+++ b/TweetProcessor/TweetSampler.Core.csproj
@@ -11,14 +11,16 @@
     <None Remove="Microsoft.Extensions.Http" />
     <None Remove="Microsoft.Extensions.DependencyInjection" />
     <None Remove="TweetinviAPI" />
+    <None Remove="NLog" />
   </ItemGroup>
     
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="TweetinviAPI" Version="5.0.4" />
+    <PackageReference Include="NLog" Version="5.0.5" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TweetSampleModel\TweetSampleModel.csproj" />
+    <ProjectReference Include="..\TweetSampleModel\TweetSampler.Model.csproj" />
   </ItemGroup>
 </Project>
