--- a/TweetSampler.Core.Tests/TweetSampler.Core.Tests.csproj
+++ b/TweetSampler.Core.Tests/TweetSampler.Core.Tests.csproj
@@ -22,6 +22,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TweetProcessor\TweetSampler.Core.csproj" />
+    <ProjectReference Include="..\TweetSampler.Core\TweetSampler.Core.csproj" />
   </ItemGroup>
 </Project>
