--- a/TweetSampler.Core.Tests/TweetSampler.Model.Tests/TweetSampler.Model.Tests.csproj
+++ b/TweetSampler.Core.Tests/TweetSampler.Model.Tests/TweetSampler.Model.Tests.csproj
@@ -22,6 +22,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\TweetSampleModel\TweetSampler.Model.csproj" />
+    <ProjectReference Include="..\..\TweetSampler.Model\TweetSampler.Model.csproj" />
   </ItemGroup>
 </Project>
