TweetSampler.Core - applied SOLID

--- a/TweetSampler.Worker/appsettings.Development.json
+++ b/TweetSampler.Worker/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "TweetSamplerConfiguration": {
-    "TwitterBearToken": "AAAAAAAAAAAAAAAAAAAAAI1ZjgEAAAAA2%2FMtTga5BIhnuOUHD%2FV%2B11qkszc%3DFVqfL6ic70HHxz3Ljttqcy7MozHvFj1W4JaVRyjVUDCdjuS6TS"
+    "TwitterBearToken": ""
   }
 }
 
